Rename path name

--- a/index.html
+++ b/index.html
@@ -103,55 +103,55 @@
 
                 <!-- Original slides:- 1 -->
 
-                <div class="slide"><img src="images/Html5.png" alt="HTML">
+                <div class="slide"><img src="images/html-5.png" alt="HTML">
                     <p>HTML</p>
                 </div>
-                <div class="slide"><img src="images/CSS3.png" alt="CSS">
+                <div class="slide"><img src="images/css-3.png" alt="CSS">
                     <p>CSS</p>
                 </div>
-                <div class="slide"><img src="images/JavaScript.png" alt="JavaScript">
+                <div class="slide"><img src="images/javascript.png" alt="JavaScript">
                     <p>JavaScript</p>
                 </div>
-                <div class="slide"><img src="images/React.png" alt="React">
+                <div class="slide"><img src="images/react.png" alt="React">
                     <p>React</p>
                 </div>
-                <div class="slide"><img src="images/Node.js.png" alt="Node.js">
+                <div class="slide"><img src="images/node.js.png" alt="Node.js">
                     <p>Node.js</p>
                 </div>
-                <div class="slide"><img src="images/MongoDB.png" alt="MongoDB">
+                <div class="slide"><img src="images/mongodb.png" alt="MongoDB">
                     <p>MongoDB</p>
                 </div>
-                <div class="slide"><img src="images/Bootstrap.png" alt="Bootstrap">
+                <div class="slide"><img src="images/bootstrap.png" alt="Bootstrap">
                     <p>Bootstrap</p>
                 </div>
-                <div class="slide"><img src="images/VS_CODE.png" alt="VS_CODE">
+                <div class="slide"><img src="images/vs_code.png" alt="VS_CODE">
                     <p>VS.CODE</p>
                 </div>
 
                 <!-- Duplicate slides for seamless effect -->
 
-                <div class="slide"><img src="images/Html5.png" alt="HTML">
+                <div class="slide"><img src="images/html-5.png" alt="HTML">
                     <p>HTML</p>
                 </div>
-                <div class="slide"><img src="images/CSS3.png" alt="CSS">
+                <div class="slide"><img src="images/css-3.png" alt="CSS">
                     <p>CSS</p>
                 </div>
-                <div class="slide"><img src="images/JavaScript.png" alt="JavaScript">
+                <div class="slide"><img src="images/javascript.png" alt="JavaScript">
                     <p>JavaScript</p>
                 </div>
-                <div class="slide"><img src="images/React.png" alt="React">
+                <div class="slide"><img src="images/react.png" alt="React">
                     <p>React</p>
                 </div>
-                <div class="slide"><img src="images/Node.js.png" alt="Node.js">
+                <div class="slide"><img src="images/node.js.png" alt="Node.js">
                     <p>Node.js</p>
                 </div>
-                <div class="slide"><img src="images/MongoDB.png" alt="MongoDB">
+                <div class="slide"><img src="images/mongodb.png" alt="MongoDB">
                     <p>MongoDB</p>
                 </div>
-                <div class="slide"><img src="images/Bootstrap.png" alt="Bootstrap">
+                <div class="slide"><img src="images/bootstrap.png" alt="Bootstrap">
                     <p>Bootstrap</p>
                 </div>
-                <div class="slide"><img src="images/VS_CODE.png" alt="VS_CODE">
+                <div class="slide"><img src="images/vs_code.png" alt="VS_CODE">
                     <p>VS.CODE</p>
                 </div>
             </div>
@@ -197,7 +197,7 @@
                 <div class="row justify-content-center ">
                     <div class=" col-lg-4 col-md-6 col-sm-10 mt-2 mb-3 d-flex justify-content-center">
                         <div class="card h-100" style="width: 18rem;">
-                            <img src="../images/Zomato-img.png" class="card-img-top " alt="Project-1">
+                            <img src="../images/zomato-img.png" class="card-img-top " alt="Project-1">
                             <div class="card-body p-1">
                                 <h5 class="fw-bold card-title">Zomato Clone</h5>
                                 <p class="card-text">A responsive Zomato clone showcasing restaurants,
@@ -220,7 +220,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-10 mt-2 mb-3 d-flex justify-content-center">
                         <div class="card h-100" style="width: 18rem;">
-                            <img src="../images/JS-img.png" class="card-img-top" alt="Project-3">
+                            <img src="../images/js-img.png" class="card-img-top" alt="Project-3">
                             <div class="card-body-3 p-1 ">
                                 <h5 class="fw-bold card-title">Tic Tac Toe with JS</h5>
                                 <p class="card-text">A fun interactive game built with JavaScript
