--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                 <h5 class="fw-bold card-title">Zomato Clone</h5>
                                 <p class="card-text">A responsive Zomato clone showcasing restaurants,
                                     menus, user-friendly interface with smooth search built in HTML & CSS.</p>
-                                <a href="./Project-Zomato/index.html" target="_blank" class="btn  fw-bold mb-3">Reach out here</a>
+                                <a href="./project-zomato/index.html" target="_blank" class="btn  fw-bold mb-3">Reach out here</a>
                             </div>
                         </div>
                     </div>
@@ -214,7 +214,7 @@
                                 <p class="card-text">An e-commerce clone project replicating Amazon features like
                                     product listing,
                                     cart, categories and responsive UI using HTML, CSS.</p>
-                                <a href="./Project-Amazon/index.html" target="_blank" class="btn  fw-bold mb-3">Reach out here</a>
+                                <a href="./project-amazon/index.html" target="_blank" class="btn  fw-bold mb-3">Reach out here</a>
                             </div>
                         </div>
                     </div>
@@ -226,7 +226,7 @@
                                 <p class="card-text">A fun interactive game built with JavaScript
                                     where two players compete to win using logic, strategy, and patterns... Play & Fun
                                 </p>
-                                <a href="./Project-Tic.Tac.Toe/index.html" target="_blank" class="btn  fw-semibold mb-3" >Reach out here</a>
+                                <a href="./project-Tic.Tac.Toe/index.html" target="_blank" class="btn  fw-semibold mb-3" >Reach out here</a>
                             </div>
                         </div>
                     </div>
