Fix image paths for About & Projects sections

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
                 <div class="row align-items-center">
                     <div class="col-md-6 col-12 ">
-                        <img src="../images/about-img.png" class="img-fluid"
+                        <img src="images/about-img.png" class="img-fluid"
                             style="object-fit: cover; border-radius:10px;" alt="Profile Photo">
                     </div>
                     <div class="col-md-6 col-12 d-flex align-items-center">
@@ -197,7 +197,7 @@
                 <div class="row justify-content-center ">
                     <div class=" col-lg-4 col-md-6 col-sm-10 mt-2 mb-3 d-flex justify-content-center">
                         <div class="card h-100" style="width: 18rem;">
-                            <img src="../images/zomato-img.png" class="card-img-top " alt="Project-1">
+                            <img src="images/zomato-img.png" class="card-img-top " alt="Project-1">
                             <div class="card-body p-1">
                                 <h5 class="fw-bold card-title">Zomato Clone</h5>
                                 <p class="card-text">A responsive Zomato clone showcasing restaurants,
@@ -208,7 +208,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-10 mt-2 mb-3 d-flex justify-content-center">
                         <div class="card  h-100 " style="width: 18rem;">
-                            <img src="../images/amazon-img.png" class="card-img-top" alt="Project-2">
+                            <img src="images/amazon-img.png" class="card-img-top" alt="Project-2">
                             <div class="card-body-2 p-1">
                                 <h5 class="fw-bold card-title">Amazon Clone</h5>
                                 <p class="card-text">An e-commerce clone project replicating Amazon features like
@@ -220,7 +220,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-10 mt-2 mb-3 d-flex justify-content-center">
                         <div class="card h-100" style="width: 18rem;">
-                            <img src="../images/js-img.png" class="card-img-top" alt="Project-3">
+                            <img src="images/js-img.png" class="card-img-top" alt="Project-3">
                             <div class="card-body-3 p-1 ">
                                 <h5 class="fw-bold card-title">Tic Tac Toe with JS</h5>
                                 <p class="card-text">A fun interactive game built with JavaScript
