Replaced CV with PDF and removed old doc files

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                     placeholder="Type Here" aria-label="Search" />
                             </div>
                             <button class="btn ms-2 fw-bold text-dark search-btn" type="submit">
-                                <a href="https://www.youtube.com/watch?v=Fbv6-50S1lc&list=RDFbv6-50S1lc&start_radio=1" target="blank">Search</a></button>
+                                <a href="" target="blank">Search</a></button>
                         </div>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                         <span>websites.</span>
                     </p>
                     <button class="p-2 fs-5 fw-semibold resume-btn">
-                        <a href="./Document/CV.docx" target="blank">Download CV Here</a></button>
+                        <a href="Tushar-CV.pdf" target="blank">Download CV Here</a></button>
                 </div>
             </div>
         </div>
