--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <span>websites.</span>
                     </p>
                     <button class="p-2 fs-5 fw-semibold resume-btn">
-                        <a href="Tushar-Resume.docx" target="blank">Download CV Here</a></button>
+                        <a href="Resume-Tushar.docx" target="blank">Download CV Here</a></button>
                 </div>
             </div>
         </div>
