--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <div class="container d-flex flex-column">
                 <h2 class="footer-heading">All Rights Reserved, Copyright 2025<i class="fa-solid fa-copyright ms-2"></i>
                 </h2>
-                <p class="footer-para">Created By Tushar Jaura Randhawa From Punjab.</p>
+                <p class="footer-para">Created & Managed By Tushar Jaura</p>
             </div>
 
         </footer>
